--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,50 +1,4 @@
-.app{
-    /* background-color:  rgb(237, 171, 47); */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.5s;
-    padding: 5px 16px;
-}
-.profile{
-    height:30px;
-    width:30px;
-    border-radius: 50%;
-    /* background-color: red; */
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.profile img{
-    height: 30px;
-    width:30px;
-    border-radius: 50%;
-    object-fit: cover;
-}
-.navigation{
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    }
-    .lists{
-        display: flex;
-    margin-left:1150px;
-    position: absolute;
-    text-decoration: none;
-
-    }
-    a{
-
-        /* position: absolute; */
-        margin-left:20px;
-        text-decoration: none;
-        font-size: large;
-        color:black
-       /* font-family:'Lato',serif; */
-    }
-    .signup{
+.signup{
         border:none;
         border-radius: 12px;
        align-items: center;
@@ -106,6 +60,14 @@ position: absolute;
             width:50%;
             background-color: rgb(237, 171, 47);
     position: absolute;
+        }
+
+        .footer{
+            position: absolute;
+            height:200px;
+            width:100%;
+            background-color: black;
+            margin-top:185%;
         }
 
 
