--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,6 +1,5 @@
 .nav{
     position: absolute;
-
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
@@ -9,12 +8,11 @@
     }
     .lists{
         display: flex;
-    margin-left:1150px;
+    margin-left:1100px;
     position: absolute;
     text-decoration: none;
     }
     a{
-
         /* position: absolute; */
         margin-left:20px;
         text-decoration: none;
@@ -223,146 +221,10 @@
     font-family: 'Times New Roman', Times, serif;
 }
 .arrival-header h1{
+    /* position: absolute; */
     font-weight: bolder;
     color: rgb(237, 171, 47);
 }
-        .new-arrival{
-            position:absolute;
-            height:500px;
-            width:1000px;
-            margin-top:820px;
-            margin-left:300px;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .new-arrival2{
-            position:absolute;
-            height:500px;
-            width:1000px;
-            margin-top:1150px;
-            margin-left:300px;
-            display: flex;
-            justify-content: space-between;
-        }
-        .description{
-            display: flex;
-            justify-content: space-between;
-
-        }
-        .description p{
-
-            font-size: medium;
-            margin-top:20px;
-
-        }
-        .book1{
-            margin-left:-100px;
-              /* Add shadows to create the "card" effect */
-              box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-              transition: 0.5s;
-              padding: 2px 16px;
-              height:fit-content;
-              width: fit-content;
-
-
-
-        }
-        .book1:hover{
-            box-shadow: 0 10px 8px 0 rgba(0,0,0,0.2);
-        }
-        .book1 img{
-            height:160px;
-            width:160px;
-
-        }
-        .book1 pre{
-            font-family: 'Times New Roman', Times, serif;
-            font-weight: bold;
-            margin-top:5px;
-
-        }
-        .book1 a{
-            margin-left:5px;
-
-         }
-
-        .book2{
-
-              /* Add shadows to create the "card" effect */
-              box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-              transition: 0.5s;
-              padding: 2px 16px;
-              height:fit-content;
-              width: fit-content;
-        }
-        .book2:hover{
-            box-shadow: 0 10px 8px 0 rgba(0,0,0,0.2);
-        }
-        .book2 img{
-            height:160px;
-            width:160px;
-        }
-        .book2 pre{
-            font-family: 'Times New Roman', Times, serif;
-            font-weight: bold;
-            margin-top:5px;
-
-        }
-     .book2 a{
-        margin-left:5px;
-     }
-
-        .book3{
-              /* Add shadows to create the "card" effect */
-              box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-              transition: 0.5s;
-              padding: 2px 16px;
-              height:fit-content;
-              width: fit-content;
-        }
-        .book3:hover{
-            box-shadow: 0 10px 8px 0 rgba(0,0,0,0.2);
-        }
-        .book3 img{
-            height:160px;
-            width:160px;
-        }
-        .book3 pre{
-            font-family: 'Times New Roman', Times, serif;
-            font-weight: bold;
-            margin-top:5px;
-
-        }
-        .book3 a{
-            margin-left:5px;
-         }
-
-         .book4{
-
-              /* Add shadows to create the "card" effect */
-              box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-              transition: 0.5s;
-              padding: 2px 16px;
-              height:fit-content;
-              width: fit-content;
-        }
-        .book4:hover{
-            box-shadow: 0 10px 8px 0 rgba(0,0,0,0.2);
-        }
-        .book4 img{
-            height:160px;
-            width:160px;
-        }
-        .book4 pre{
-            font-family: 'Times New Roman', Times, serif;
-            font-weight: bold;
-            margin-top:5px;
-
-        }
-        .book4 a{
-            margin-left:5px;
-         }
 
 
     .welcome{
