--- a/public/css/productpage/cart.css
+++ b/public/css/productpage/cart.css
@@ -17,6 +17,7 @@ margin-left:100px;
 margin-top:100px;
 border-radius: 5px;
 display: flex;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 /* justify-content: space-between; */
 }
 
@@ -31,8 +32,8 @@ display: flex;
     padding-left:10px;
     padding-right:10px;
     padding-top:20px;
-    padding-bottom:20px
-
+    padding-bottom:20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .upperpart{
     display:flex;
