--- a/public/css/productpage/index.css
+++ b/public/css/productpage/index.css
@@ -9,6 +9,7 @@ padding-left: 20px;
 padding-right: 20px;;
 padding-bottom:50px;
 border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .product-image{
     background-color: rgb(174, 172, 172);
