--- a/public/css/admin/category.css
+++ b/public/css/admin/category.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: #F1F1F1;
+}
 .category-header{
     margin-top:-40px;
 
@@ -155,6 +157,7 @@ margin-left:10px;
     background-color: rgba(53, 207, 61, 0.3);
     height:fit-content;
     width:1000px;
+
     /* margin-top:200px; */
     margin-left: 20%;
     border-radius: 5px;
