--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(214, 214, 214);
+    background-color: #F1F1F1;
     /* background-color: white; */
 }
 
@@ -9,6 +9,7 @@ position: absolute;
 height:500px;
 width:100%;
 margin-top: 0px;
+object-fit: cover;
 }
 .transparent{
     height:500px;
@@ -68,7 +69,7 @@ margin-left:85%;
 }
 
 .sub-header2 h1{
-    margin-top: 1150px;
+    margin-top: -50px;
     margin-left: 200px;
     position: absolute;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -80,22 +81,10 @@ margin-left:85%;
     text-decoration: underline;
     text-decoration-color: orange;
 }
-.sub-header3 h1{
-    margin-top: 1550px;
-    margin-left: 200px;
-    position: absolute;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: bolder;
-    font-size: 20px;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-.sub-header3 h1:hover {
-    text-decoration: underline;
-    text-decoration-color: orange;
-}
+
 
 .new-arrival{
-    position:absolute;
+    /* position:absolute; */
     height:500px;
     width:1000px;
     margin-top:800px;
@@ -104,8 +93,16 @@ margin-left:85%;
     justify-content: space-between;
     /* background-color: white; */
 }
-
-
+.new-arrival2{
+    /* position:absolute; */
+    height:450px;
+    width:1000px;
+    /* margin-top:50px; */
+    margin-left:300px;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: white; */
+}
 
 .description{
     display: flex;
@@ -150,100 +147,6 @@ margin-left:85%;
     margin-left:150px;
 }
 .book1 a{
-    margin-left:5px;
-    text-decoration: none;
- }
-
- /* PRODUCT 2 */
- .new-arrival2{
-    position:absolute;
-    height:500px;
-    width:1000px;
-    margin-top:1200px;
-    margin-left:200px;
-    display: flex;
-    /* justify-content: space-between; */
-
-}
-.book2{
-    /* margin-left:-100px; */
-    margin-left:30px;
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
-    transition: 0.5s;
-    padding: 20px 16px;
-    height:250px;
-    width: 190px;
-    /* margin-top:50px; */
-    border-radius: 5px;
-}
-.book2:hover{
-    box-shadow: 0 10px 8px 0 rgba(0,0,0,0.3);
-}
-.book2 img{
-    height:160px;
-    width:160px;
-}
-.book2 pre{
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 15px;
-    margin-top:5px;
-}
-.book2 p{
-    position: absolute;
-    margin-top:40px;
-    padding-right: 5px;
-    margin-left:150px;
-}
-.book2 a{
-    margin-left:5px;
-    text-decoration: none;
- }
-
-
-
- /* PRODUCT 3 */
- .new-arrival3{
-    position:absolute;
-    height:500px;
-    width:1000px;
-    margin-top:1600px;
-    margin-left:200px;
-    display: flex;
-    /* justify-content: space-between; */
-}
-.book3{
-    margin-left:30px;
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
-    transition: 0.5s;
-    padding: 20px 16px;
-    height:250px;
-    width: 190px;
-    border-radius: 5px;
-    /* margin-top:50px; */
-}
-.book3:hover{
-    box-shadow: 0 10px 8px 0 rgba(0,0,0,0.3);
-}
-.book3 img{
-    height:160px;
-    width:160px;
-}
-.book3 pre{
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 15px;
-    margin-top:5px;
-}
-.book3 p{
-    position: absolute;
-    margin-top:40px;
-    padding-right: 5px;
-    margin-left:150px;
-}
-.book3 a{
     margin-left:5px;
     text-decoration: none;
  }
