--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -12,9 +12,11 @@
     background-color: white;
     z-index: 1000; /* Ensures the navbar is above other elements */
 }
-.logo h1{
-margin:0;
-padding:0;
+.logo img{
+/* margin:0;
+padding:0; */
+height:50px;
+width:200px;
 }
 .nav-profile {
     height: 45px;
@@ -33,6 +35,7 @@ padding:0;
     position: relative;
     display: inline-block;
     margin-right: 10px;
+    margin-top:-10px;
 
 }
 
@@ -40,12 +43,14 @@ padding:0;
     position: absolute;
     /* top: -10px; */
     right: 88px;
+    margin-right:30px;
     background-color: rgb(247, 171, 31);
     color: white;
     border-radius: 50%;
     padding: 3px 7px;
     font-size: 12px;
     display: none;
+    margin-top:-5px;
 }
 
 .nav img {
@@ -53,9 +58,10 @@ padding:0;
     height: 45px; /* Maintain aspect ratio */
     border-radius: 50%; /* Make it circular */
     cursor: pointer; /* Change cursor to pointer */
+margin-top:-10px;
 }
 .lists{
-margin-left:950px;
+margin-left:900px;
 margin-right:20px;
 margin-top:10px;
 display:flex;
